--- a/src/main/resources/ru/dae56/nkm/Main-view.fxml
+++ b/src/main/resources/ru/dae56/nkm/Main-view.fxml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 
-<BorderPane fx:id="MainBorder" maxHeight="800.0" maxWidth="1200.0" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/20.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.dae56.nkm.HelloController">
+<BorderPane fx:id="MainBorder" maxHeight="800.0" maxWidth="1200.0" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0"
+            xmlns="http://javafx.com/javafx/20.0.2"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="ru.dae56.nkm.controllers.HelloController">
+
     <bottom>
-        <HBox fx:id="BottomHBox" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+        <HBox fx:id="BottomHBox" prefHeight="100.0" prefWidth="1200.0" spacing="20.0" alignment="CENTER">
+            <Button fx:id="btnSaveGraph" text="Сохранить граф" />
+            <Button fx:id="btnRestoreGraph" text="Восстановить граф" />
+            <Button fx:id="btnClearGraph" text="Очистить граф" />
+            <Button fx:id="btnAnalyzeCycles" text="Анализ циклов" />
+        </HBox>
     </bottom>
+
     <center>
-        <ScrollPane fx:id="FrontScrollPane" hvalue="0.5" prefHeight="200.0" prefWidth="200.0" vvalue="0.5" BorderPane.alignment="CENTER">
+        <ScrollPane fx:id="FrontScrollPane" hvalue="0.5" vvalue="0.5" prefHeight="700.0" prefWidth="1200.0" BorderPane.alignment="CENTER">
             <AnchorPane fx:id="AnchorPane" prefHeight="10000.0" prefWidth="10000.0" />
         </ScrollPane>
     </center>
 </BorderPane>
+
+
