--- a/src/main/resources/ru/dae56/nkm/Main-view.fxml
+++ b/src/main/resources/ru/dae56/nkm/Main-view.fxml
@@ -1,17 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import java.net.URL?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<BorderPane fx:id="MainBorder" maxHeight="800.0" maxWidth="1200.0" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" xmlns="http://javafx.com/javafx/20.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.dae56.nkm.HelloController">
-   <bottom>
-      <HBox fx:id="BottomHBox" prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
-   </bottom>
+<BorderPane fx:id="MainBorder" maxHeight="800.0" maxWidth="1200.0" minHeight="800.0" minWidth="1200.0" prefHeight="800.0" prefWidth="1200.0" stylesheets="@mainWindow.css" xmlns="http://javafx.com/javafx/20.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ru.dae56.nkm.HelloController">
    <center>
       <ScrollPane fx:id="FrontScrollPane" hvalue="0.5" prefHeight="200.0" prefWidth="200.0" vvalue="0.5" BorderPane.alignment="CENTER">
-            <AnchorPane fx:id="AnchorPane" prefHeight="10000.0" prefWidth="10000.0" />
+         <stylesheets>
+            <URL value="@sroolBar.css" />
+            <URL value="@scroolPane.css" />
+         </stylesheets>
+         <styleClass>
+            <String fx:value="scroll-bar" />
+            <String fx:value="scroll-pane" />
+         </styleClass>
+         <content>
+               <AnchorPane fx:id="AnchorPane" prefHeight="10000.0" prefWidth="10000.0" />
+         </content>
       </ScrollPane>
    </center>
+   <right>
+      <VBox prefHeight="800.0" prefWidth="350.0" styleClass="tiles-content" stylesheets="@tilesContainer.css" BorderPane.alignment="CENTER">
+         <children>
+            <VBox prefHeight="200.0" prefWidth="40.0" styleClass="hbox-style" stylesheets="@tile.css">
+               <children>
+                  <TextField fx:id="TextFieldNodeName" promptText="Enter Node name" styleClass="text-field-primary" stylesheets="@textField.css" />
+                  <HBox prefHeight="100.0" prefWidth="200.0">
+                     <children>
+                        <Button fx:id="ButtonAddNode" mnemonicParsing="false" onAction="#addNode" styleClass="button-primary" stylesheets="@headButton.css" text="Add Node" textAlignment="JUSTIFY">
+                           <HBox.margin>
+                              <Insets top="10.0" />
+                           </HBox.margin>
+                        </Button>
+                        <Button fx:id="ButtonRemoveNode" mnemonicParsing="false" onAction="#removeNode" styleClass="button-primary" stylesheets="@headButton.css" text="Remove Node" textAlignment="JUSTIFY">
+                           <HBox.margin>
+                              <Insets top="10.0" />
+                           </HBox.margin>
+                           <opaqueInsets>
+                              <Insets />
+                           </opaqueInsets>
+                        </Button>
+                     </children></HBox>
+               </children>
+            </VBox>
+            <VBox prefHeight="200.0" prefWidth="100.0" />
+         </children>
+         <BorderPane.margin>
+            <Insets left="10.0" />
+         </BorderPane.margin></VBox>
+   </right>
 </BorderPane>
